[gd_scene load_steps=14 format=3 uid="uid://dp1u334voc3of"]

[ext_resource type="Script" path="res://core/room/common/leave/fallen_leave.gd" id="1_ay32q"]
[ext_resource type="Texture2D" uid="uid://cf0cwrkmtgeav" path="res://test/leaves.png" id="1_iycmg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a108y"]
size = Vector2(14, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_beo5a"]
atlas = ExtResource("1_iycmg")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ifxg"]
atlas = ExtResource("1_iycmg")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rc05o"]
atlas = ExtResource("1_iycmg")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfpvr"]
atlas = ExtResource("1_iycmg")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bhhs"]
atlas = ExtResource("1_iycmg")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_82b75"]
atlas = ExtResource("1_iycmg")
region = Rect2(0, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qo4je"]
atlas = ExtResource("1_iycmg")
region = Rect2(0, 96, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ewyol"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_beo5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ifxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc05o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfpvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bhhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82b75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo4je")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_4ei2f"]
resource_name = "leaves"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0166667, 0.0333333, 0.05, 0.0666667, 0.0833333, 0.1, 0.116667, 0.133333, 0.15, 0.166667, 0.183333, 0.2, 0.216667, 0.233333, 0.25, 0.266667, 0.283333, 0.3, 0.316667, 0.333333, 0.35, 0.366667, 0.383333, 0.4, 0.416667, 0.433333, 0.45, 0.466667, 0.483333, 0.5, 0.516667, 0.533333, 0.55, 0.566667, 0.583333, 0.6, 0.616667, 0.633333, 0.65, 0.666667, 0.683333, 0.7, 0.716667, 0.733333, 0.75, 0.766667, 0.783333, 0.8, 0.816667, 0.833333, 0.85, 0.866667, 0.883333, 0.9, 0.916667, 0.933333, 0.95, 0.966667, 0.983333, 1, 1.01667, 1.03333, 1.05, 1.06667, 1.08333, 1.1, 1.11667, 1.13333, 1.15, 1.16667, 1.18333, 1.2, 1.21667, 1.23333, 1.25, 1.26667, 1.28333, 1.3, 1.31667, 1.33333, 1.35, 1.36667, 1.38333, 1.4, 1.41667, 1.43333, 1.45, 1.46667, 1.48333, 1.5, 1.51667, 1.53333, 1.55, 1.56667, 1.58333, 1.6, 1.61667, 1.63333, 1.65, 1.66667, 1.68333, 1.7, 1.71667, 1.73333, 1.75, 1.76667, 1.78333, 1.8, 1.81667, 1.83333, 1.85, 1.86667, 1.88333, 1.9, 1.91667, 1.93333, 1.95, 1.96667, 1.98333, 2, 2.01667, 2.03333, 2.05, 2.06667, 2.08333, 2.1, 2.11667, 2.13333, 2.15, 2.16667, 2.18333, 2.2, 2.21667, 2.23333, 2.25, 2.26667, 2.28333, 2.3, 2.31667, 2.33333, 2.35, 2.36667, 2.38333, 2.4, 2.41667, 2.43333, 2.45, 2.46667, 2.48333, 2.5, 2.51667, 2.53333, 2.55, 2.56667, 2.58333, 2.6, 2.61667, 2.63333, 2.65, 2.66667, 2.68333, 2.7, 2.71667, 2.73333, 2.75, 2.76667, 2.78333, 2.8, 2.81667, 2.83333, 2.85, 2.86667, 2.88333, 2.9, 2.91667, 2.93333, 2.95, 2.96667, 2.98333, 3, 3.01667, 3.03333, 3.05, 3.06667, 3.08333, 3.1, 3.11667, 3.13333, 3.15, 3.16667, 3.18333, 3.2, 3.21667, 3.23333, 3.25, 3.26667, 3.28333, 3.3, 3.31667, 3.33333, 3.35, 3.36667, 3.38333, 3.4, 3.41667, 3.43333, 3.45, 3.46667, 3.48333, 3.5, 3.51667, 3.53333, 3.55, 3.56667, 3.58333, 3.6, 3.61667, 3.63333, 3.65, 3.66667, 3.68333, 3.7, 3.71667, 3.73333, 3.75, 3.76667, 3.78333, 3.8, 3.81667, 3.83333, 3.85, 3.86667, 3.88333, 3.9, 3.91667, 3.93333, 3.95, 3.96667, 3.98333, 4, 4.01667, 4.03333, 4.05, 4.06667, 4.08333, 4.1, 4.11667, 4.13333, 4.15, 4.16667, 4.18333, 4.2, 4.21667, 4.23333, 4.25, 4.26667, 4.28333, 4.3, 4.31667, 4.33333, 4.35, 4.36667, 4.38333, 4.4, 4.41667, 4.43333, 4.45, 4.46667, 4.48333, 4.5, 4.51667, 4.53333, 4.55, 4.56667, 4.58333, 4.6, 4.61667, 4.63333, 4.65, 4.66667, 4.68333, 4.7, 4.71667, 4.73333, 4.75, 4.76667, 4.78333, 4.8, 4.81667, 4.83333, 4.85, 4.86667, 4.88333, 4.9, 4.91667, 4.93333, 4.95, 4.96667, 4.98333, 5, 5.01667, 5.03333, 5.05, 5.06667, 5.08333, 5.1, 5.11667, 5.13333, 5.15, 5.16667, 5.18333, 5.2, 5.21667, 5.23333, 5.25, 5.26667, 5.28333, 5.3, 5.31667, 5.33333, 5.35, 5.36667, 5.38333, 5.4, 5.41667, 5.43333, 5.45, 5.46667, 5.48333, 5.5, 5.51667, 5.53333, 5.55, 5.56667, 5.58333, 5.6, 5.61667, 5.63333, 5.65, 5.66667, 5.68333, 5.7, 5.71667, 5.73333, 5.75, 5.76667, 5.78333, 5.8, 5.81667, 5.83333, 5.85, 5.86667, 5.88333, 5.9, 5.91667, 5.93333, 5.95, 5.96667, 5.98333, 6, 6.01667, 6.03333, 6.05, 6.06667, 6.08333, 6.1, 6.11667, 6.13333, 6.15, 6.16667, 6.18333, 6.2, 6.21667, 6.23333, 6.25, 6.26667, 6.28333, 6.3, 6.31667, 6.33333, 6.35, 6.36667, 6.38333, 6.4, 6.41667, 6.43333, 6.45, 6.46667, 6.48333, 6.5, 6.51667, 6.53333, 6.55, 6.56667, 6.58333, 6.6, 6.61667, 6.63333, 6.65, 6.66667, 6.68333, 6.7, 6.71667, 6.73333, 6.75, 6.76667, 6.78333, 6.8, 6.81667, 6.83333, 6.85, 6.86667, 6.88333, 6.9, 6.91667, 6.93333, 6.95, 6.96667, 6.98333, 7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-0.0295221, 0.0823934), Vector2(-0.116671, 0.326568), Vector2(-0.259319, 0.728014), Vector2(-0.455342, 1.28222), Vector2(-0.702611, 1.98469), Vector2(-0.999, 2.83089), Vector2(-1.34238, 3.81634), Vector2(-1.73063, 4.93651), Vector2(-2.16163, 6.1869), Vector2(-2.63323, 7.563), Vector2(-3.14332, 9.0603), Vector2(-3.68978, 10.6743), Vector2(-4.27047, 12.4005), Vector2(-4.88326, 14.2343), Vector2(-5.52604, 16.1713), Vector2(-6.19668, 18.207), Vector2(-6.89304, 20.3368), Vector2(-7.613, 22.5563), Vector2(-8.35444, 24.8608), Vector2(-9.11523, 27.246), Vector2(-9.89324, 29.7074), Vector2(-10.6863, 32.2403), Vector2(-11.4924, 34.8403), Vector2(-12.3093, 37.5029), Vector2(-13.135, 40.2235), Vector2(-13.9672, 42.9978), Vector2(-14.8039, 45.8211), Vector2(-15.6429, 48.6889), Vector2(-16.4821, 51.5968), Vector2(-17.3194, 54.5402), Vector2(-18.1527, 57.5146), Vector2(-18.9798, 60.5156), Vector2(-19.7986, 63.5385), Vector2(-20.607, 66.579), Vector2(-21.4028, 69.6324), Vector2(-22.184, 72.6943), Vector2(-22.9484, 75.7602), Vector2(-23.6938, 78.8255), Vector2(-24.4182, 81.8858), Vector2(-25.1193, 84.9365), Vector2(-25.7952, 87.9732), Vector2(-26.4437, 90.9913), Vector2(-27.0625, 93.9863), Vector2(-27.6497, 96.9537), Vector2(-28.2031, 99.889), Vector2(-28.7206, 102.788), Vector2(-29.1999, 105.645), Vector2(-29.6391, 108.457), Vector2(-30.036, 111.219), Vector2(-30.3884, 113.926), Vector2(-30.6942, 116.574), Vector2(-30.9513, 119.158), Vector2(-31.1576, 121.675), Vector2(-31.311, 124.118), Vector2(-31.4093, 126.484), Vector2(-31.4503, 128.769), Vector2(-31.4321, 130.967), Vector2(-31.3523, 133.075), Vector2(-31.209, 135.087), Vector2(-31, 137), Vector2(-30.7162, 138.849), Vector2(-30.3522, 140.676), Vector2(-29.9111, 142.479), Vector2(-29.3963, 144.26), Vector2(-28.8109, 146.019), Vector2(-28.1583, 147.757), Vector2(-27.4415, 149.475), Vector2(-26.6638, 151.172), Vector2(-25.8286, 152.85), Vector2(-24.939, 154.509), Vector2(-23.9982, 156.15), Vector2(-23.0094, 157.772), Vector2(-21.976, 159.378), Vector2(-20.9011, 160.966), Vector2(-19.788, 162.538), Vector2(-18.6399, 164.095), Vector2(-17.46, 165.636), Vector2(-16.2515, 167.163), Vector2(-15.0178, 168.676), Vector2(-13.7619, 170.175), Vector2(-12.4873, 171.661), Vector2(-11.197, 173.135), Vector2(-9.89431, 174.596), Vector2(-8.58249, 176.047), Vector2(-7.26475, 177.487), Vector2(-5.94432, 178.916), Vector2(-4.62443, 180.336), Vector2(-3.30832, 181.747), Vector2(-1.99921, 183.149), Vector2(-0.700336, 184.543), Vector2(0.58507, 185.929), Vector2(1.85378, 187.309), Vector2(3.10255, 188.682), Vector2(4.32816, 190.049), Vector2(5.52737, 191.411), Vector2(6.69697, 192.768), Vector2(7.8337, 194.121), Vector2(8.93435, 195.47), Vector2(9.99569, 196.816), Vector2(11.0145, 198.159), Vector2(11.9875, 199.501), Vector2(12.9114, 200.84), Vector2(13.7832, 202.179), Vector2(14.5995, 203.518), Vector2(15.357, 204.856), Vector2(16.0526, 206.196), Vector2(16.6831, 207.536), Vector2(17.2451, 208.879), Vector2(17.7355, 210.223), Vector2(18.1511, 211.571), Vector2(18.4885, 212.921), Vector2(18.7447, 214.276), Vector2(18.9162, 215.636), Vector2(19, 217), Vector2(18.9926, 218.366), Vector2(18.8947, 219.728), Vector2(18.7091, 221.088), Vector2(18.4384, 222.444), Vector2(18.0855, 223.797), Vector2(17.653, 225.147), Vector2(17.1437, 226.494), Vector2(16.5604, 227.837), Vector2(15.9058, 229.177), Vector2(15.1826, 230.513), Vector2(14.3936, 231.846), Vector2(13.5416, 233.175), Vector2(12.6293, 234.5), Vector2(11.6594, 235.822), Vector2(10.6347, 237.14), Vector2(9.55785, 238.455), Vector2(8.43172, 239.765), Vector2(7.259, 241.071), Vector2(6.04244, 242.374), Vector2(4.7848, 243.672), Vector2(3.4888, 244.966), Vector2(2.1572, 246.256), Vector2(0.792744, 247.542), Vector2(-0.601823, 248.823), Vector2(-2.02375, 250.1), Vector2(-3.4703, 251.373), Vector2(-4.93872, 252.641), Vector2(-6.42628, 253.905), Vector2(-7.93021, 255.164), Vector2(-9.44779, 256.418), Vector2(-10.9763, 257.668), Vector2(-12.5129, 258.913), Vector2(-14.0549, 260.153), Vector2(-15.5995, 261.389), Vector2(-17.1441, 262.619), Vector2(-18.6858, 263.845), Vector2(-20.222, 265.065), Vector2(-21.7498, 266.28), Vector2(-23.2665, 267.49), Vector2(-24.7695, 268.695), Vector2(-26.2558, 269.895), Vector2(-27.7229, 271.089), Vector2(-29.1679, 272.278), Vector2(-30.5881, 273.461), Vector2(-31.9807, 274.639), Vector2(-33.3431, 275.812), Vector2(-34.6724, 276.978), Vector2(-35.9659, 278.139), Vector2(-37.2209, 279.295), Vector2(-38.4346, 280.444), Vector2(-39.6043, 281.588), Vector2(-40.7272, 282.725), Vector2(-41.8006, 283.857), Vector2(-42.8218, 284.983), Vector2(-43.7879, 286.102), Vector2(-44.6963, 287.216), Vector2(-45.5442, 288.323), Vector2(-46.3289, 289.424), Vector2(-47.0476, 290.519), Vector2(-47.6975, 291.607), Vector2(-48.276, 292.689), Vector2(-48.7802, 293.765), Vector2(-49.2075, 294.833), Vector2(-49.555, 295.896), Vector2(-49.8201, 296.951), Vector2(-50, 298), Vector2(-50.1094, 299.029), Vector2(-50.1655, 300.025), Vector2(-50.1697, 300.99), Vector2(-50.1232, 301.925), Vector2(-50.0271, 302.831), Vector2(-49.8827, 303.71), Vector2(-49.6912, 304.563), Vector2(-49.4538, 305.391), Vector2(-49.1718, 306.196), Vector2(-48.8464, 306.978), Vector2(-48.4788, 307.739), Vector2(-48.0702, 308.481), Vector2(-47.6218, 309.204), Vector2(-47.1349, 309.91), Vector2(-46.6107, 310.6), Vector2(-46.0504, 311.276), Vector2(-45.4552, 311.939), Vector2(-44.8263, 312.589), Vector2(-44.1651, 313.229), Vector2(-43.4726, 313.86), Vector2(-42.7501, 314.482), Vector2(-41.9988, 315.098), Vector2(-41.22, 315.708), Vector2(-40.4149, 316.314), Vector2(-39.5847, 316.917), Vector2(-38.7305, 317.519), Vector2(-37.8538, 318.12), Vector2(-36.9555, 318.722), Vector2(-36.0371, 319.326), Vector2(-35.0996, 319.934), Vector2(-34.1444, 320.546), Vector2(-33.1726, 321.165), Vector2(-32.1855, 321.791), Vector2(-31.1843, 322.425), Vector2(-30.1702, 323.07), Vector2(-29.1444, 323.725), Vector2(-28.1081, 324.394), Vector2(-27.0626, 325.076), Vector2(-26.0091, 325.773), Vector2(-24.9489, 326.486), Vector2(-23.883, 327.217), Vector2(-22.8128, 327.968), Vector2(-21.7395, 328.738), Vector2(-20.6643, 329.53), Vector2(-19.5884, 330.344), Vector2(-18.5131, 331.183), Vector2(-17.4395, 332.047), Vector2(-16.3689, 332.938), Vector2(-15.3024, 333.857), Vector2(-14.2415, 334.805), Vector2(-13.1871, 335.783), Vector2(-12.1406, 336.794), Vector2(-11.1033, 337.837), Vector2(-10.0762, 338.915), Vector2(-9.06065, 340.028), Vector2(-8.05787, 341.179), Vector2(-7.06905, 342.368), Vector2(-6.09543, 343.596), Vector2(-5.13822, 344.865), Vector2(-4.19865, 346.176), Vector2(-3.27794, 347.531), Vector2(-2.37731, 348.93), Vector2(-1.49798, 350.375), Vector2(-0.641163, 351.868), Vector2(0.191904, 353.409), Vector2(1.00001, 355), Vector2(1.81526, 356.637), Vector2(2.66868, 358.315), Vector2(3.55738, 360.033), Vector2(4.47847, 361.788), Vector2(5.42908, 363.58), Vector2(6.40631, 365.408), Vector2(7.4073, 367.269), Vector2(8.42914, 369.163), Vector2(9.46897, 371.088), Vector2(10.5239, 373.042), Vector2(11.591, 375.026), Vector2(12.6675, 377.036), Vector2(13.7504, 379.071), Vector2(14.8369, 381.131), Vector2(15.9241, 383.214), Vector2(17.009, 385.318), Vector2(18.0889, 387.442), Vector2(19.1608, 389.584), Vector2(20.2218, 391.744), Vector2(21.2692, 393.92), Vector2(22.2999, 396.11), Vector2(23.3111, 398.314), Vector2(24.2999, 400.529), Vector2(25.2635, 402.755), Vector2(26.1989, 404.989), Vector2(27.1032, 407.231), Vector2(27.9737, 409.479), Vector2(28.8073, 411.732), Vector2(29.6013, 413.988), Vector2(30.3527, 416.247), Vector2(31.0587, 418.506), Vector2(31.7163, 420.764), Vector2(32.3227, 423.02), Vector2(32.875, 425.273), Vector2(33.3703, 427.52), Vector2(33.8058, 429.762), Vector2(34.1785, 431.995), Vector2(34.4856, 434.22), Vector2(34.7242, 436.434), Vector2(34.8914, 438.636), Vector2(34.9843, 440.826), Vector2(35, 443), Vector2(34.9475, 445.14), Vector2(34.8385, 447.229), Vector2(34.6743, 449.271), Vector2(34.4561, 451.27), Vector2(34.1854, 453.232), Vector2(33.8633, 455.159), Vector2(33.4911, 457.056), Vector2(33.0702, 458.927), Vector2(32.6019, 460.776), Vector2(32.0874, 462.608), Vector2(31.5281, 464.427), Vector2(30.9252, 466.236), Vector2(30.28, 468.041), Vector2(29.5938, 469.844), Vector2(28.868, 471.652), Vector2(28.1038, 473.466), Vector2(27.3024, 475.293), Vector2(26.4653, 477.135), Vector2(25.5937, 478.998), Vector2(24.6888, 480.885), Vector2(23.7521, 482.8), Vector2(22.7847, 484.748), Vector2(21.788, 486.733), Vector2(20.7633, 488.759), Vector2(19.7118, 490.83), Vector2(18.6349, 492.95), Vector2(17.5338, 495.124), Vector2(16.4099, 497.356), Vector2(15.2644, 499.649), Vector2(14.0986, 502.009), Vector2(12.9139, 504.439), Vector2(11.7115, 506.943), Vector2(10.4927, 509.526), Vector2(9.25886, 512.192), Vector2(8.01119, 514.944), Vector2(6.75102, 517.788), Vector2(5.47965, 520.728), Vector2(4.19836, 523.766), Vector2(2.90846, 526.909), Vector2(1.61124, 530.159), Vector2(0.307985, 533.521), Vector2(-1, 537), Vector2(-2.35762, 540.625), Vector2(-3.80553, 544.415), Vector2(-5.33611, 548.36), Vector2(-6.94171, 552.447), Vector2(-8.61469, 556.665), Vector2(-10.3474, 561.002), Vector2(-12.1323, 565.448), Vector2(-13.9616, 569.99), Vector2(-15.8278, 574.617), Vector2(-17.7231, 579.317), Vector2(-19.64, 584.08), Vector2(-21.5709, 588.893), Vector2(-23.508, 593.744), Vector2(-25.4438, 598.623), Vector2(-27.3705, 603.518), Vector2(-29.2807, 608.417), Vector2(-31.1666, 613.309), Vector2(-33.0206, 618.182), Vector2(-34.835, 623.024), Vector2(-36.6023, 627.825), Vector2(-38.3148, 632.573), Vector2(-39.9648, 637.256), Vector2(-41.5447, 641.862), Vector2(-43.0469, 646.381), Vector2(-44.4637, 650.8), Vector2(-45.7875, 655.108), Vector2(-47.0107, 659.293), Vector2(-48.1256, 663.345), Vector2(-49.1246, 667.251), Vector2(-50, 671), Vector2(-50.7431, 674.648), Vector2(-51.3529, 678.257), Vector2(-51.8336, 681.827), Vector2(-52.1892, 685.356), Vector2(-52.424, 688.845), Vector2(-52.542, 692.292), Vector2(-52.5474, 695.697), Vector2(-52.4442, 699.058), Vector2(-52.2367, 702.375), Vector2(-51.929, 705.648), Vector2(-51.5252, 708.875), Vector2(-51.0293, 712.056), Vector2(-50.4457, 715.19), Vector2(-49.7782, 718.275), Vector2(-49.0313, 721.313), Vector2(-48.2088, 724.3), Vector2(-47.315, 727.238), Vector2(-46.354, 730.124), Vector2(-45.3299, 732.959), Vector2(-44.2469, 735.741), Vector2(-43.1091, 738.469), Vector2(-41.9206, 741.144), Vector2(-40.6855, 743.764), Vector2(-39.408, 746.328), Vector2(-38.0922, 748.836), Vector2(-36.7422, 751.286), Vector2(-35.3623, 753.678), Vector2(-33.9563, 756.012), Vector2(-32.5287, 758.286), Vector2(-31.0833, 760.5), Vector2(-29.6245, 762.653), Vector2(-28.1562, 764.743), Vector2(-26.6827, 766.772), Vector2(-25.2081, 768.736), Vector2(-23.7365, 770.637), Vector2(-22.272, 772.472), Vector2(-20.8188, 774.242), Vector2(-19.3809, 775.945), Vector2(-17.9626, 777.581), Vector2(-16.5679, 779.148), Vector2(-15.201, 780.647), Vector2(-13.866, 782.076), Vector2(-12.567, 783.435), Vector2(-11.3082, 784.722), Vector2(-10.0938, 785.938), Vector2(-8.92768, 787.08), Vector2(-7.81416, 788.149), Vector2(-6.75733, 789.144), Vector2(-5.76132, 790.064), Vector2(-4.83025, 790.907), Vector2(-3.96825, 791.674), Vector2(-3.17946, 792.364), Vector2(-2.468, 792.976), Vector2(-1.838, 793.508), Vector2(-1.29359, 793.961), Vector2(-0.838913, 794.333), Vector2(-0.478083, 794.623), Vector2(-0.215235, 794.832), Vector2(-0.0544968, 794.958), Vector2(0, 795)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2dwtu"]
_data = {
"leaves": SubResource("Animation_4ei2f")
}

[node name="FallenLeave" type="Node2D"]
script = ExtResource("1_ay32q")
base_sacle = 0.8

[node name="RayCast2D" type="Area2D" parent="."]
position = Vector2(0, 795)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCast2D"]
position = Vector2(-1, -11.5)
shape = SubResource("RectangleShape2D_a108y")

[node name="base" type="AnimatedSprite2D" parent="."]
self_modulate = Color(0, 0.235294, 0.278431, 1)
position = Vector2(0, 795)
rotation = 6.28319
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_ewyol")
autoplay = "default"
frame_progress = 0.155747

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="base"]
remote_path = NodePath("../../RayCast2D")
update_rotation = false
update_scale = false

[node name="Aniplayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../base")
libraries = {
"": SubResource("AnimationLibrary_2dwtu")
}
autoplay = "leaves"

[connection signal="body_entered" from="RayCast2D" to="." method="_on_ray_cast_2d_body_entered"]
[connection signal="animation_finished" from="Aniplayer" to="." method="_on_aniplayer_animation_finished"]
